--- a/convert_bibtex/2020_stakeholder-designed_scenarios_for_/cite.bib
+++ b/convert_bibtex/2020_stakeholder-designed_scenarios_for_/cite.bib
@@ -1,14 +1,10 @@
 @Article{VanDijk2020e,
-  Author = {Michiel Van Dijk and Adam Szirmai},
+  Author = {Michiel van Dijk and Marc Gramberger and David Laborde and Maryia Mandryk and Lindsay Shutes and Elke Stehfest and Hugo Valin and Katharina Faradsch},
   Title = {Stakeholder-designed scenarios for global food security assessments},
   Journal = {Global Food Security},
   Year = {2020},
   Volume = {24},
-  Number = {},
   Pages = {100352},
-  Booktitle = {},
-  Chapter = {},
-  Editor = {NA},
   Publisher = {Elsevier},
   Doi = {10.1016/j.gfs.2020.100352}
 }
