--- a/content/post/2020-09-01-setting-up-my-academci-website-with-blogdown/index.en.Rmd
+++ b/content/post/2020-09-01-setting-up-my-academci-website-with-blogdown/index.en.Rmd
@@ -10,7 +10,7 @@ summary: ''
 authors: []
 lastmod: '2020-07-16T15:16:44+02:00'
 featured: no
-draft: no
+draft: yes
 image:
   caption: ''
   focal_point: ''
@@ -39,4 +39,5 @@ Used code prepared by, who should get all the credits for coding this. I updated
 # Nitty gritty
 
 - Switching off connected content.
+- add netify toml as things were not running.
 
