--- a/content/publication/2020_generating_multi-period_crop_distri/cite.bib
+++ b/content/publication/2020_generating_multi-period_crop_distri/cite.bib
@@ -1,5 +1,5 @@
 @Unpublished{VanDijk2020,
   Author = {Michiel van Dijk and Ulrike Wood-Sichra and Yating Ru and Amanda Palazzo and Petr Havlik and Liangzhi You},
-  Title = {Mapping the change in crop distribution over time using a data fusion approach},
+  Title = {Generating multi-period crop distribution maps for Southern Africa using a data fusion approach},
   Year = {2020}
 }
