add new structure with projects to illustrate current research

--- a/content/publication/2012_mapping_maize_yield_gaps_in_africa_/cite.bib
+++ b/content/publication/2012_mapping_maize_yield_gaps_in_africa_/cite.bib
@@ -2,6 +2,6 @@
   Author = {Michiel van Dijk and Gerdien Meijerink and Karl Shutes},
   Title = {Mapping maize yield gaps in Africa Can a leopard change its spots?},
   Year = {2012},
-  Doi = {10.1111/j.1467-9361.2009.00510.x},
-  Url = {http://www.lei.wur.nl/NL/publicaties+en+producten/LEIpublicaties/?id=1403}
+  Series = {LEI report 2012-010},
+  Url = {https://edepot.wur.nl/205942}
 }
