--- a/convert_bibtex/2018_comparing_impacts_of_climate_change/cite.bib
+++ b/convert_bibtex/2018_comparing_impacts_of_climate_change/cite.bib
@@ -7,6 +7,5 @@
   Number = {6},
   Pages = {064021},
   Publisher = {IOP Publishing},
-  Doi = {10.1088/1748-9326/aabdc4},
-  Url = {http://stacks.iop.org/1748-9326/13/i=6/a=064021?key=crossref.42a4eb1897f2ed545f2b0dc439d03e64}
+  Doi = {10.1088/1748-9326/aabdc4}
 }
