--- a/content/publication/2022_occupations_on_the_map_using_a_supe/cite.bib
+++ b/content/publication/2022_occupations_on_the_map_using_a_supe/cite.bib
@@ -1,6 +1,12 @@
-@Unpublished{VanDijk2022,
-  Author = {Michiel van Dijk and Thijs De Lange and Paul van Leeuwen and Philippe Debie},
+@Article{VanDijk2022c,
+  Author = {Michiel van Dijk and Thijs de Lange and Paul van Leeuwen and Philippe Debie},
   Title = {Occupations on the map: Using a super learner algorithm to downscale labor statistics},
+  Journal = {PLOS ONE},
   Year = {2022},
-  Doi = {10.21203/rs.3.rs-1300541/v1}
+  Volume = {17},
+  Number = {12},
+  Pages = {e0278120},
+  Editor = {Sotirios Koukoulas},
+  Doi = {10.1371/journal.pone.0278120},
+  Url = {https://dx.plos.org/10.1371/journal.pone.0278120}
 }
