--- a/content/project/cgiar_shift/index.rmd
+++ b/content/project/cgiar_shift/index.rmd
@@ -40,4 +40,4 @@ Food systems are not providing sustainable healthy diets for everyone, everywher
 
 This is the only CGIAR Initiative with the main goal of ensuring sustainable healthy diets for all through food systems transformation. Starting from an innovative, consumer-focused perspective, this Initiative aims to identify effective policy options through research; strengthen capacity and develop robust metrics and tools that support stakeholders’ decisions when developing pathways to transform food systems toward sustainable healthy diets, improved livelihoods, gender equity, and social inclusion.  
 
-Wageningen University & Research, together with the International Food Policy Research Institute (IFPRI) and the Alliance of Bioversity International and the International Center for Tropical Agriculture (CIAT), is leading the implementation the Sustainable Healthy Diets initiative. I am active in work package 4, which deals with the analysis of trade-offs and synergies associated with the transformation to healthy and sustainable diets. The MAGNET model, in combination with microsimulation modelling, will be used to support the development of country strategies in Bangladesh, Vietnam and Ethiopia. The project has a time horizon of two years with a possibility for extension.
+Wageningen University & Research, together with the International Food Policy Research Institute (IFPRI) and the Alliance of Bioversity International and the International Center for Tropical Agriculture (CIAT), is leading the implementation the Sustainable Healthy Diets initiative. I leading work package 4, which deals with the analysis of trade-offs and synergies associated with the transformation to healthy and sustainable diets. The MAGNET model, in combination with microsimulation modelling, will be used to support the development of country strategies in Bangladesh, Vietnam and Ethiopia. The project has a time horizon of two years with a possibility for extension.
